--- a/templates/views/partials/header-add-job.ejs
+++ b/templates/views/partials/header-add-job.ejs
@@ -55,7 +55,7 @@
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/home">Home <span class="sr-only">Home</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Applications </a>
