--- a/templates/views/add-job.ejs
+++ b/templates/views/add-job.ejs
@@ -72,7 +72,7 @@
       <div class="col-sm-2">Branches Eligible</div>
       <div class="col-sm-1">
         <div class="form-check">
-          <input name="eligibility.branch[]" id="branches" value="CSE" class="form-check-input" type="checkbox" />
+          <input name="eligibility.branch" id="branches" value="CSE" class="form-check-input" type="checkbox" />
           <label class="form-check-label" for="gridCheck1">
             CSE
           </label>
@@ -80,7 +80,7 @@
       </div>
       <div class="col-sm-1">
         <div class="form-check">
-          <input name="eligibility.branch[]" id="branches" value="ECE" class="form-check-input" type="checkbox"
+          <input name="eligibility.branch" id="branches" value="ECE" class="form-check-input" type="checkbox"
             id="gridCheck2" />
           <label class="form-check-label" for="gridCheck2">
             ECE
@@ -89,7 +89,7 @@
       </div>
       <div class="col-sm-1">
         <div class="form-check">
-          <input name="eligibility.branch[]" id="branches" value="EEE" class="form-check-input" type="checkbox"
+          <input name="eligibility.branch id="branches" value="EEE" class="form-check-input" type="checkbox"
             id="gridCheck3" />
           <label class="form-check-label" for="gridCheck3">
             EEE
@@ -98,7 +98,7 @@
       </div>
       <div class="col-sm-1">
         <div class="form-check">
-          <input name="eligibility.branch[]" id="branches" value="MEC" class="form-check-input" type="checkbox"
+          <input name="eligibility.branch" id="branches" value="MEC" class="form-check-input" type="checkbox"
             id="gridCheck4" />
           <label class="form-check-label" for="gridCheck4">
             MEC
@@ -107,7 +107,7 @@
       </div>
       <div class="col-sm-1">
         <div class="form-check">
-          <input name="eligibility.branch[]" id="branches" value="CME" class="form-check-input" type="checkbox"
+          <input name="eligibility.branch" id="branches" value="CME" class="form-check-input" type="checkbox"
             id="gridCheck5" />
           <label class="form-check-label" for="gridCheck5">
             CHEM
@@ -116,7 +116,7 @@
       </div>
       <div class="col-sm-1">
         <div class="form-check">
-          <input name="eligibility.branch[]" id="branches" value="CIV" class="form-check-input" type="checkbox"
+          <input name="eligibility.branch" id="branches" value="CIV" class="form-check-input" type="checkbox"
             id="gridCheck6" />
           <label class="form-check-label" for="gridCheck6">
             CIV
@@ -125,7 +125,7 @@
       </div>
       <div class="col-sm-1">
         <div class="form-check">
-          <input name="eligibility.branch[]" id="branches" value="MME" class="form-check-input" type="checkbox"
+          <input name="eligibility.branch" id="branches" value="MME" class="form-check-input" type="checkbox"
             id="gridCheck7" />
           <label class="form-check-label" for="gridCheck7">
             MME
@@ -134,7 +134,7 @@
       </div>
       <div class="col-sm-1">
         <div class="form-check">
-          <input name="eligibility.branch[]" id="branches" value="MIN" class="form-check-input" type="checkbox"
+          <input name="eligibility.branch" id="branches" value="MIN" class="form-check-input" type="checkbox"
             id="gridCheck8" />
           <label class="form-check-label" for="gridCheck8">
             MIN
@@ -143,7 +143,7 @@
       </div>
       <div class="col-sm-1">
         <div class="form-check">
-          <input name="eligibility.branch[]" id="branches" value="ARCH" class="form-check-input" type="checkbox"
+          <input name="eligibility.branch" id="branches" value="ARCH" class="form-check-input" type="checkbox"
             id="gridCheck9" />
           <label class="form-check-label" for="gridCheck9">
             ARCH
@@ -161,22 +161,23 @@
 
     <div class="form-group">
       <h6>Notes</h6>
-      <input type="checkbox" id="note1" name="note[]" value="Students going for higher studies need not apply." />
+      <input type="checkbox" id="note1" name="note" value="Students going for higher studies need not apply." />
       <label for="note1">Students going for higher studies need not apply.</label><br />
-      <input type="checkbox" id="note2" name="note[]" value="Dates are tentative. Please check for updates" />
+      <input type="checkbox" id="note2" name="note" value="Dates are tentative. Please check for updates" />
       <label for="note2">Dates are tentative. Please check for updates.</label>
     </div>
 
     <div class="custom-file">
-      <input name="fileName[]" type="file" class="custom-file-input" id="customFile" />
+      <input name="fileName" type="file" class="custom-file-input" id="customFile" />
       <label class="custom-file-label" for="customFile">Attachments - Choose file</label>
     </div>
 
-    
 
+    
     <input name="dateOfPost" type="hidden"  id="dateOfPost" />
 
     <button type="submit" class="btn btn-primary mybutton">Add</button>
+
   </form>
   <div style="min-height: 10em;"></div>
 </div>
