--- a/templates/views/partials/header.ejs
+++ b/templates/views/partials/header.ejs
@@ -57,7 +57,7 @@
             <a class="nav-link" href="/home">Home <span class="sr-only">Home</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="api/schedule">Applications </a>
+            <a class="nav-link" href="/schedule">Applications </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Profile </a>
