--- a/templates/views/partials/header-add-job.ejs
+++ b/templates/views/partials/header-add-job.ejs
@@ -58,7 +58,7 @@
                         <a class="nav-link" href="/home">Home <span class="sr-only">Home</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Applications </a>
+                        <a class="nav-link" href="/schedule">Applications </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Profile</a>
@@ -75,9 +75,9 @@
                         </div>
                     </li>
                 </ul>
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+                <form action="/home" method="GET" class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="text" name="search" placeholder="Search Companies">
+                    <button value="Search" class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
                 </form>
             </div>
         </div>
