--- a/templates/views/add-profile.ejs
+++ b/templates/views/add-profile.ejs
@@ -1,33 +1,35 @@
 <%- include('partials/header-add-job'); -%>
 
 <div class="container">
+    <h1 style="margin-top: 3rem;">My Profile</h1>
 
-    <h1 style="margin-top: 3rem">My Profile</h1>
-
-    <h3 style="margin-top: 3rem">Basic Details</h3>
-    <hr>
-    <form class="" action="/student" method="POST">
+    <h3 style="margin-top: 3rem;">Basic Details</h3>
+    <hr />
+    <form class="" action="/student" method="PUT">
         <div class="form-row">
             <div class="form-group col-md-4 mb-3">
                 <label for="exampleFormControlInput1">First Name</label>
-                <input name="firstName" type="text" class="form-control" id="exampleFormControlInput1" value="<%= Student.firstName %>">
+                <input name="firstName" type="text" class="form-control" id="exampleFormControlInput1"
+                    value="<%= Student.firstName %>" />
             </div>
             <div class="form-group col-md-4 mb-3">
                 <label for="exampleFormControlInput1">Middle Name</label>
-                <input name="middleName" type="text" class="form-control" id="exampleFormControlInput1">
+                <input name="middleName" type="text" class="form-control" id="exampleFormControlInput1" />
             </div>
             <div class="form-group col-md-4 mb-3">
                 <label for="exampleFormControlInput1">Last Name</label>
-                <input name="lastName" type="text" class="form-control" id="exampleFormControlInput1" value="<%= Student.lastName %>">
+                <input name="lastName" type="text" class="form-control" id="exampleFormControlInput1"
+                    value="<%= Student.lastName %>" />
             </div>
         </div>
         <div class="form-group">
             <label for="exampleFormControlInput1">Email</label>
-            <input name="email" type="email" class="form-control" id="exampleFormControlInput1" value="<%= Student.email %>">
+            <input name="email" type="email" class="form-control" id="exampleFormControlInput1"
+                value="<%= Student.email %>" />
         </div>
         <div class="form-group">
             <label for="exampleFormControlInput1">Branch</label>
-            <select name="department" class="custom-select" id="validationDefault04" required>
+            <select name="department" class="custom-select" id="validationDefault04">
                 <option selected disabled value="">Choose...</option>
                 <option>B.Tech. Electronics and Communication Engineering</option>
                 <option>B.Tech. Computer Science Engineering</option>
@@ -43,11 +45,13 @@
         <div class="form-row">
             <div class="form-group col-md-6 mb-3">
                 <label for="exampleFormControlInput1">ID Number</label>
-                <input name="idNo" type="number" class="form-control" id="exampleFormControlInput1" value="<%= Student.idNo %>">
+                <input name="idNo" type="number" class="form-control" id="exampleFormControlInput1"
+                    value="<%= Student.idNo %>" />
             </div>
             <div class="form-group col-md-6 mb-3">
                 <label for="exampleFormControlInput1">Enrollment Number</label>
-                <input name="enrollment" type="text" class="form-control" id="exampleFormControlInput1" value="<%= Student.enrollment %>">
+                <input name="enrollment" type="text" class="form-control" id="exampleFormControlInput1"
+                    value="<%= Student.enrollment %>" />
             </div>
         </div>
         <div class="form-row">
@@ -63,17 +67,17 @@
             </div>
             <div class="form-group col-md-6 mb-3">
                 <label for="exampleFormControlInput1">CGPA (current)</label>
-                <input name="cgpa" type="number" class="form-control" id="exampleFormControlInput1">
+                <input name="cgpa" type="number" class="form-control" id="exampleFormControlInput1" />
             </div>
         </div>
         <div class="form-row">
             <div class="form-group col-md-6 mb-3">
                 <label for="exampleFormControlInput1">Date of Birth</label>
-                <input name="dob" type="date" class="form-control" id="exampleFormControlInput1">
+                <input name="dob" type="date" class="form-control" id="exampleFormControlInput1" />
             </div>
             <div class="form-group col-md-6 mb-3">
                 <label for="exampleFormControlInput1">Contact</label>
-                <input name="contact" type="number" class="form-control" id="exampleFormControlInput1">
+                <input name="contact" type="number" class="form-control" id="exampleFormControlInput1" />
             </div>
         </div>
         <div class="form-row">
@@ -107,107 +111,112 @@
             </select>
         </div>
 
-
-        <h3 style="margin-top: 3rem">Address</h3>
-        <hr>
+        <h3 style="margin-top: 3rem;">Address</h3>
+        <hr />
         <label for="exampleFormControlInput1">Permanent Address</label>
         <div class="form-group">
             <label for="exampleFormControlInput1">Address Line 1</label>
-            <input name="address[0][addressLine1]" type="text" class="form-control" id="exampleFormControlInput1">
+            <input name="address[0][addressLine1]" type="text" class="form-control" id="exampleFormControlInput1" />
         </div>
         <div class="form-group">
             <label for="exampleFormControlInput1">Address Line 2</label>
-            <input name="address[0][addressLine2]" type="text" class="form-control" id="exampleFormControlInput1">
+            <input name="address[0][addressLine2]" type="text" class="form-control" id="exampleFormControlInput1" />
         </div>
         <div class="form-row">
             <div class="form-group col-md-4 mb-3">
                 <label for="exampleFormControlInput1">City</label>
-                <input name="address[0][city]" type="text" class="form-control" id="exampleFormControlInput1">
+                <input name="address[0][city]" type="text" class="form-control" id="exampleFormControlInput1" />
             </div>
             <div class="form-group col-md-4 mb-3">
                 <label for="exampleFormControlInput1">State</label>
-                <input name="address[0][state]" type="text" class="form-control" id="exampleFormControlInput1">
+                <input name="address[0][state]" type="text" class="form-control" id="exampleFormControlInput1" />
             </div>
             <div class="form-group col-md-4 mb-3">
                 <label for="exampleFormControlInput1">Country</label>
-                <input name="address[0][country]" type="text" class="form-control" id="exampleFormControlInput1">
+                <input name="address[0][country]" type="text" class="form-control" id="exampleFormControlInput1" />
             </div>
         </div>
 
-        <input class="conditional_form_part_activator_address" type="checkbox"> Current Address same as Permanent Address
+        <input class="conditional_form_part_activator_address" type="checkbox" />
+        Current Address same as Permanent Address
 
         <div class="conditional_form_part_address">
-            <br>
+            <br />
             <label for="exampleFormControlInput1">Current Address</label>
             <div class="form-group">
                 <label for="exampleFormControlInput1">Address Line 1</label>
-                <input name="address[1][addressLine1]" type="text" class="form-control" id="exampleFormControlInput1">
+                <input name="address[1][addressLine1]" type="text" class="form-control" id="exampleFormControlInput1" />
             </div>
             <div class="form-group">
                 <label for="exampleFormControlInput1">Address Line 2</label>
-                <input name="address[1][addressLine2]" type="text" class="form-control" id="exampleFormControlInput1">
+                <input name="address[1][addressLine2]" type="text" class="form-control" id="exampleFormControlInput1" />
             </div>
             <div class="form-row">
                 <div class="form-group col-md-4 mb-3">
                     <label for="exampleFormControlInput1">City</label>
-                    <input name="address[1][city]" type="text" class="form-control" id="exampleFormControlInput1">
+                    <input name="address[1][city]" type="text" class="form-control" id="exampleFormControlInput1" />
                 </div>
                 <div class="form-group col-md-4 mb-3">
                     <label for="exampleFormControlInput1">State</label>
-                    <input name="address[1][state]" type="text" class="form-control" id="exampleFormControlInput1">
+                    <input name="address[1][state]" type="text" class="form-control" id="exampleFormControlInput1" />
                 </div>
                 <div class="form-group col-md-4 mb-3">
                     <label for="exampleFormControlInput1">Country</label>
-                    <input name="address[1][country]" type="text" class="form-control" id="exampleFormControlInput1">
+                    <input name="address[1][country]" type="text" class="form-control" id="exampleFormControlInput1" />
                 </div>
             </div>
         </div>
 
         <div id="parentDivEducation">
             <div id="duplicaterEducation">
-                <h3 style="margin-top: 3rem">Education 1</h3>
-                <hr>
+                <h3 style="margin-top: 3rem;">Education 1</h3>
+                <hr />
                 <div class="form-group">
                     <label for="exampleFormControlInput1">Institue Name</label>
-                    <input name="education[][institute]" type="text" class="form-control" id="exampleFormControlInput1">
+                    <input name="education[][institute]" type="text" class="form-control"
+                        id="exampleFormControlInput1" />
                 </div>
                 <div class="form-group">
                     <label for="exampleFormControlInput1">Degree</label>
-                    <input name="education[][degree]" type="text" class="form-control" id="exampleFormControlInput1">
+                    <input name="education[][degree]" type="text" class="form-control" id="exampleFormControlInput1" />
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6 mb-3">
                         <label for="exampleFormControlInput1">Start Date</label>
-                        <input name="education[][startDate]" type="date" class="form-control" id="exampleFormControlInput1">
+                        <input name="education[][startDate]" type="date" class="form-control"
+                            id="exampleFormControlInput1" />
                     </div>
                     <div class="form-group col-md-6 mb-3">
                         <label for="exampleFormControlInput1">End Date</label>
-                        <input name="education[][endDate]" type="date" class="form-control" id="exampleFormControlInput1">
+                        <input name="education[][endDate]" type="date" class="form-control"
+                            id="exampleFormControlInput1" />
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="exampleFormControlInput1">CGPA</label>
-                    <input name="education[][cgpa]" type="number" class="form-control" id="exampleFormControlInput1">
+                    <input name="education[][cgpa]" type="number" class="form-control" id="exampleFormControlInput1" />
                 </div>
             </div>
         </div>
 
         <a href="#container" id="addEducation" onclick="duplicateDivEducation()">Add Education</a>
-        <a style="visibility: hidden" href="#container" id="deleteEducation" onclick="deleteEducation()"> | <span style="color:#FF0000;">Delete Education</span></a>
-
+        <a style="visibility: hidden;" href="#container" id="deleteEducation" onclick="deleteEducation()">
+            | <span style="color: #ff0000;">Delete Education</span></a>
 
         <div id="parentDivExperience">
             <div id="duplicaterExperience">
-                <h3 style="margin-top: 3rem">Experience 1</h3>
-                <hr>
+                <h3 style="margin-top: 3rem;">Experience 1</h3>
+                <hr />
                 <div class="form-group">
                     <label for="exampleFormControlInput1">Company/Organization Name</label>
-                    <input name="experience[][organization]" type="text" class="form-control" id="exampleFormControlInput1">
+                    <input name="experience[][organization]" type="text" class="form-control"
+                        id="exampleFormControlInput1" />
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6 mb-3">
                         <label for="exampleFormControlInput1">Experience Title</label>
-                        <input name="experience[][experienceTitle]" type="text" class="form-control" id="exampleFormControlInput1">
+                        <input name="experience[][experienceTitle]" type="text" class="form-control"
+                            id="exampleFormControlInput1" />
                     </div>
                     <div class="form-group col-md-6 mb-3">
                         <label for="exampleFormControlInput1">Employment Type</label>
@@ -226,46 +235,50 @@
                 <div class="form-row">
                     <div class="form-group col-md-6 mb-3">
                         <label for="exampleFormControlInput1">Start Date</label>
-                        <input name="experience[][startDate]" type="date" class="form-control" id="exampleFormControlInput1">
+                        <input name="experience[][startDate]" type="date" class="form-control"
+                            id="exampleFormControlInput1" />
                     </div>
                     <div class="form-group col-md-6 mb-3">
                         <label for="exampleFormControlInput1">End Date</label>
-                        <input name="experience[][endDate]" type="date" class="form-control" id="exampleFormControlInput1">
+                        <input name="experience[][endDate]" type="date" class="form-control"
+                            id="exampleFormControlInput1" />
                     </div>
                 </div>
             </div>
         </div>
 
         <a href="#container" id="addExperience" onclick="duplicateDivExperience()">Add Experience</a>
-        <a style="visibility: hidden" href="#container" id="deleteExperience" onclick="deleteExperience()"> | <span style="color:#FF0000;">Delete Experience</span></a>
+        <a style="visibility: hidden;" href="#container" id="deleteExperience" onclick="deleteExperience()">
+            | <span style="color: #ff0000;">Delete Experience</span></a>
 
-
-        <h3 style="margin-top: 3rem">Attachments</h3>
-        <hr>
+        <h3 style="margin-top: 3rem;">Attachments</h3>
+        <hr />
         <div class="form-row">
             <div class="input-group mb-3 col-md-4 mb-3">
                 <div class="input-group-prepend">
                     <span class="input-group-text" id="basic-addon3">LinkedIn</span>
                 </div>
-                <input name="linkedin" type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3">
+                <input name="linkedin" type="text" class="form-control" id="basic-url"
+                    aria-describedby="basic-addon3" />
             </div>
             <div class="input-group mb-3 col-md-4 mb-3">
                 <div class="input-group-prepend">
                     <span class="input-group-text" id="basic-addon3">GitHub</span>
                 </div>
-                <input name="github" type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3">
+                <input name="github" type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3" />
             </div>
             <div class="form-group col-md-4 mb-3">
-                <input name="fileName" type="text" class="custom-file-input" id="customFile">
+                <input name="fileName" type="text" class="custom-file-input" id="customFile" />
                 <label class="custom-file-label" for="customFile">Resume - Choose file</label>
             </div>
         </div>
 
-
-        <div style="height: 10rem " class="mybutton">
-            <button id="submitButton" name="submitProfile" class="btn btn-primary" type="submit" class="btn btn-primary mybutton">Submit</button>
+        <div style="height: 10rem;" class="mybutton">
+            <button id="submitButton" name="submitProfile" class="btn btn-primary" type="submit"
+                class="btn btn-primary mybutton">
+                Submit
+            </button>
         </div>
-
     </form>
 </div>
 
