--- a/templates/views/partials/header.ejs
+++ b/templates/views/partials/header.ejs
@@ -63,7 +63,7 @@
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="/home">Home <span class="sr-only">Home</span></a>
+                        <a class="nav-link" href="/home/1">Home <span class="sr-only">Home</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/schedule">Applications </a>
@@ -87,7 +87,7 @@
                         </div>
                     </li>
                 </ul>
-                <form action="/home" method="GET" class="form-inline my-2 my-lg-0">
+                <form action="/home/1" method="GET" class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" type="text" name="search" placeholder="Search Companies">
                     <button value="Search" class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
                 </form>
