--- a/templates/views/home.ejs
+++ b/templates/views/home.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header'); -%>
+<%- include('partials/header') -%>
 <div class="album py-5 bg-light">
     <div class="container">
         <div class="row">
@@ -9,8 +9,7 @@
                         <div class="form-group">
                             <label for="companyName" class="col-md-12 control-label">By Company Name</label>
                             <div class="col-md-12">
-                                <input type="text" class="form-control" name="fltrname"
-                                    placeholder="Enter Compnay Name">
+                                <input type="text" class="form-control" name="fltrname" placeholder="Enter Compnay Name">
                             </div>
                         </div>
                     </div>
@@ -19,8 +18,7 @@
                         <div class="form-group">
                             <label for="ctc" class="col-md-12 control-label">By Job Profile</label>
                             <div class="col-md-12">
-                                <input type="text" class="form-control" name="fltrProfile"
-                                    placeholder="Enter Job Profile">
+                                <input type="text" class="form-control" name="fltrProfile" placeholder="Enter Job Profile">
                             </div>
                         </div>
                     </div>
@@ -62,18 +60,14 @@
                 </form>
             </div>
         </div>
-
         <div class="row">
             <%if (jobs.length > 0){%>
             <%jobs.forEach(function(job) {%>
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm" style="min-height: 36em;">
-                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                        xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false"
-                        role="img" aria-label="Placeholder: Thumbnail">
+                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                         <title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                            dy=".3em">Thumbnail</text>
+                        <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
                     </svg>
                     <div class="card-body">
                         <form action="/action" method="post">
@@ -90,25 +84,21 @@
                                 <p></p>
                                 <% } %>
                             </div>
-                            <!-- <p name="jobDescription" class="card-text">
-                                <%=job.jobDescription.substring(0, 50) + " ..."%>
-                                <a href="/jobs/<%=job.jobID%>">Read More</a>
-                            </p> -->
+                            <%=job.jobDescription.substring(0, 50) + " ..."%>
+                            <a href="/jobs/<%=job.jobID%>">Read More</a>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button name="buttonAction" value="view<%=job._id%>" type="submit"
-                                        class="btn btn-sm btn-outline-secondary">View</button>
-                                    <button name="buttonAction" value="aply<%=job._id%>" type="submit"
-                                        class="btn btn-sm btn-outline-secondary">Apply</button>
+                                    <button name="buttonAction" value="view<%=job._id%>" type="submit" class="btn btn-sm btn-outline-secondary">View</button>
+                                    <button name="buttonAction" value="aply<%=job._id%>" type="submit" class="btn btn-sm btn-outline-secondary">Apply</button>
                                 </div>
-                                <small
-                                    class="text-muted"><%= job.dateOfPost.getDate() %>-<%= job.dateOfPost.getMonth() %>-<%= job.dateOfPost.getFullYear() %></small>
+                                <small class="text-muted"><%= job.dateOfPost.getDate() %>-<%= job.dateOfPost.getMonth() %>-<%= job.dateOfPost.getFullYear() %></small>
                             </div>
                         </form>
                     </div>
                 </div>
             </div>
             <%});%>
+            <%}%>
         </div>
         <div style="margin:auto;">
             <ul class="pagination">
@@ -117,25 +107,25 @@
                 </li>
                 <li class="page-item">
                     <%if(page!=1){var a=parseInt(page)-1;%>
-                        <a class="page-link" href="/home/<%=a%>">Previous</a>
-                    <%}%>
+            <a class="page-link" href="/home/<%=a%>">Previous</a>
+            <%}%>
                 </li>
                 <!-- <li class="page-item"><a class="page-link" href="#">1</a></li>
                 <li class="page-item"><a class="page-link" href="#">2</a></li>
                 <li class="page-item"><a class="page-link" href="#">3</a></li> -->
                 <% if (pages != page) { %>
-                    <% if ((pages-1) != page) { %>
-                        <li class="page-item">
-                            <a class="page-link" href="/home/<%=page+1%>">Next</a>
-                        </li>
-                    <%}%>
-                    <li class="page-item">
-                        <a class="page-link" href="/home/<%=pages%>">Last</a>
-                    </li>
-                <%}%>
+            <% if ((pages-1) != page) { %>
+            <li class="page-item">
+                <a class="page-link" href="/home/<%=page+1%>">Next</a>
+            </li>
+            <%}%>
+                <li class="page-item">
+                    <a class="page-link" href="/home/<%=pages%>">Last</a>
+            </li>
+            <%}%>
             </ul>
         </div>
     </div>
 </div>
 <div style="min-height: 10em;"></div>
-<%- include('partials/footer'); -%>
+<%- include('partials/footer') -%>
