--- a/templates/views/home.ejs
+++ b/templates/views/home.ejs
@@ -101,7 +101,7 @@
             <%}%>
         </div>
         <div style="margin:auto;">
-            <ul class="pagination">
+            <ul class="pagination justify-content-center" >
                 <li class="page-item">
                     <a class="page-link" href="/home/1/">First</a>
                 </li>
