Dynamic NavBar according to role

--- a/templates/views/home.ejs
+++ b/templates/views/home.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header') -%>
+<%- include('partials/header',{role: 0}) -%>
 <div class="album py-5 bg-light">
     <div class="container">
         <div class="row">
