--- a/templates/views/dashboard.ejs
+++ b/templates/views/dashboard.ejs
@@ -1,3 +1,3 @@
-<%- include('partials/header-admin') -%>
+<%- include('partials/header', {role: 1}) -%>
 <div></div>
 <%- include('partials/footer') -%>
