--- a/templates/views/myProfile.ejs
+++ b/templates/views/myProfile.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header'); -%>
+<%- include('partials/header',{role: 0}) -%>
 <div class="album py-5 bg-light m-1">
     <div class="container">
         <!-- Jumbotron-->
