--- a/templates/views/home.ejs
+++ b/templates/views/home.ejs
@@ -4,12 +4,13 @@
         <div class="row">
             <div class="col-md-12">
                 <h1>Filter Companies</h1>
-                <form action="/searchfilter/" id="CompnayForm" class="form-horizontal" method="POST">
+                <form action="/searchfilter/1" id="CompnayForm" class="form-horizontal" method="POST">
                     <div class="col-md-3">
                         <div class="form-group">
                             <label for="companyName" class="col-md-12 control-label">By Company Name</label>
                             <div class="col-md-12">
-                                <input type="text" class="form-control" name="fltrname" placeholder="Enter Compnay Name">
+                                <input type="text" class="form-control" name="fltrname"
+                                    placeholder="Enter Compnay Name">
                             </div>
                         </div>
                     </div>
@@ -18,7 +19,8 @@
                         <div class="form-group">
                             <label for="ctc" class="col-md-12 control-label">By Job Profile</label>
                             <div class="col-md-12">
-                                <input type="text" class="form-control" name="fltrProfile" placeholder="Enter Job Profile">
+                                <input type="text" class="form-control" name="fltrProfile"
+                                    placeholder="Enter Job Profile">
                             </div>
                         </div>
                     </div>
@@ -28,22 +30,12 @@
                             <label for="ctc" class="col-md-12 control-label">CTC</label>
                             <div class="col-md-12">
                                 <select name="fltrCTC" class="form-control">
-                                    <option value="25 LPA">25 LPA</option>
-                                    <option value="38 LPA">38 LPA</option>
-                                    <option value="20 LPA">20 LPA</option>
-                                    <option value="38 LPA">10 LPA</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-3">
-                        <div class="form-group">
-                            <label for="ctc" class="col-md-12 control-label">Dream Non-Dream</label>
-                            <div class="col-md-12">
-                                <select name="fltrDream" class="form-control">
-                                    <option value="Dream">Dream</option>
-                                    <option value="Non-Dream">Non-Dream</option>
+                                    <option selected>Choose...</option>
+                                    <option value="1">Less than <strong>8 LPA</strong> (i.e. Non Dream)</option>
+                                    <option value="2"><strong>8-15 LPA </strong>(Dream)</option>
+                                    <option value="3">15-20 LPA (Dream)</option>
+                                    <option value="4">20-30 LPA (Dream)</option>
+                                    <option value="5">Greater than 30 LPA (Dream)</option>
                                 </select>
                             </div>
                         </div>
@@ -65,9 +57,12 @@
             <%jobs.forEach(function(job) {%>
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm" style="min-height: 36em;">
-                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
+                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
+                        xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false"
+                        role="img" aria-label="Placeholder: Thumbnail">
                         <title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
+                        <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
+                            dy=".3em">Thumbnail</text>
                     </svg>
                     <div class="card-body">
                         <form action="/action" method="post">
@@ -88,10 +83,13 @@
                             <a href="/jobs/<%=job.jobID%>">Read More</a>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button name="buttonAction" value="view<%=job._id%>" type="submit" class="btn btn-sm btn-outline-secondary">View</button>
-                                    <button name="buttonAction" value="aply<%=job._id%>" type="submit" class="btn btn-sm btn-outline-secondary">Apply</button>
+                                    <button name="buttonAction" value="view<%=job._id%>" type="submit"
+                                        class="btn btn-sm btn-outline-secondary">View</button>
+                                    <button name="buttonAction" value="aply<%=job._id%>" type="submit"
+                                        class="btn btn-sm btn-outline-secondary">Apply</button>
                                 </div>
-                                <small class="text-muted"><%= job.dateOfPost.getDate() %>-<%= job.dateOfPost.getMonth() %>-<%= job.dateOfPost.getFullYear() %></small>
+                                <small
+                                    class="text-muted"><%= job.dateOfPost.getDate() %>-<%= job.dateOfPost.getMonth() %>-<%= job.dateOfPost.getFullYear() %></small>
                             </div>
                         </form>
                     </div>
