Fixed view my applications backend

--- a/templates/views/view-applications.ejs
+++ b/templates/views/view-applications.ejs
@@ -42,7 +42,7 @@
             <% } %>
 
 
-            <h4>Yesterday</h4>
+            <!-- <h4>Yesterday</h4>
             <% if (yesterday.length>0) { %>
             <%yesterday.forEach(function(schedule) {%>
             <div class="row-md-2">
@@ -76,9 +76,9 @@
             <%});%>
             <%} else { %>
             <p> No campus events to show</p>
-            <% } %>
+            <% } %> -->
 
-            <h4>Upcoming</h4>
+            <!-- <h4>Upcoming</h4>
             <% if (upcoming.length>0) { %>
             <%upcoming.forEach(function(schedule) {%>
             <div class="row-md-2">
@@ -112,7 +112,7 @@
             <%});%>
             <%} else { %>
             <p> No campus events to show</p>
-            <% } %>
+            <% } %> -->
         </div>
     </div>
 </div>
